Wed Jul 27 01:05:28 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_method.c (obj_respond_to): fix the respond_to_missing? override
	  case.  based on the patch by Jeremy Evans at [ruby-core:38417].
	  [Feature #5072]

	* parse.y (rb_check_id): make the given name a symbol or a string.
	  based on the second patch by Jeremy Evans at [ruby-core:38447]

Wed Jul 27 00:50:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/lib/bigdecimal/util.rb (Rational#to_d):
	  zero or negative precision is error.  fixes #5098.
	  [ruby-dev:44210]

	* test/bigdecimal/test_bigdecimal_util.rb: add test for the above
	  change.

Wed Jul 27 00:48:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/lib/bigdecimal/util.rb (Float#to_d): modified for
	  specifying precision.  fixes #5098.  [ruby-dev:44210]

	* test/bigdecimal/test_bigdecimal_util.rb: add test for the above
	  change.

Wed Jul 27 00:45:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/lib/bigdecimal/util.rb (Integer#to_d): added
	  for symmetry to BigDecimal() function with an Integer.
	  fixes #5098.  [ruby-dev:44210]

	* test/bigdecimal/test_bigdecimal_util.rb: add test for the above
	  change.

Wed Jul 27 00:30:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/lib/bigdecimal/util.rb (BigDecimal#to_d): added
	  for adapting other Numeric subclasses.  [ruby-dev:44245]

	* test/bigdecimal/test_bigdecimal_util.rb: test for the above change.

Wed Jul 27 00:27:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* bigdecimal/bigdecimal.c (VpDup) a new function for duplicating
	  a BigDecimal.

	* bigdecimal/bigdecimal.c (BigDecimal_new): support generating a new
	  BigDecimal from another BigDecimal using BigDecimal global function
	  or constructor.  [ruby-dev:44245]

Tue Jul 26 23:33:24 2011  Igor Zubkov  <igor.zubkov@gmail.com>

	* array.c: Fix typo. https://github.com/ruby/ruby/pull/36

Mon Jul 25 23:51:01 2011  Yusuke Endoh  <mame@tsg.ne.jp>
